logs/quantumcore.storages.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/quantumcore'...
Listing './lib/python3.5/site-packages/quantumcore/storages'...
Compiling './lib/python3.5/site-packages/quantumcore/storages/filesystem.py'...
***   File "./lib/python3.5/site-packages/quantumcore/storages/filesystem.py", line 123
    print dest_filename, source_filename
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/quantumcore/storages/mongomappingstore.py'...
***   File "./lib/python3.5/site-packages/quantumcore/storages/mongomappingstore.py", line 20
    except pymongo.errors.DuplicateKeyError, e:
                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/quantumcore/storages/tests'...
Listing './lib/python3.5/site-packages/quantumcore.storages-0.9.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
